; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_19560.c_int2char.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_19560.c_int2char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@int2char_tmp = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @int2char(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @bzero(i8** @int2char_tmp, i32 8)
  %4 = load i32, i32* %2, align 4
  %5 = and i32 %4, 255
  %6 = trunc i32 %5 to i8
  %7 = load i8*, i8** @int2char_tmp, align 8
  %8 = getelementptr inbounds i8, i8* %7, i64 0
  store i8 %6, i8* %8, align 1
  %9 = load i32, i32* %2, align 4
  %10 = and i32 %9, 65280
  %11 = ashr i32 %10, 8
  %12 = trunc i32 %11 to i8
  %13 = load i8*, i8** @int2char_tmp, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 1
  store i8 %12, i8* %14, align 1
  %15 = load i32, i32* %2, align 4
  %16 = and i32 %15, 16711680
  %17 = ashr i32 %16, 16
  %18 = trunc i32 %17 to i8
  %19 = load i8*, i8** @int2char_tmp, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 2
  store i8 %18, i8* %20, align 1
  %21 = load i32, i32* %2, align 4
  %22 = and i32 %21, -16777216
  %23 = lshr i32 %22, 24
  %24 = trunc i32 %23 to i8
  %25 = load i8*, i8** @int2char_tmp, align 8
  %26 = getelementptr inbounds i8, i8* %25, i64 3
  store i8 %24, i8* %26, align 1
  %27 = load i8*, i8** @int2char_tmp, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 4
  store i8 0, i8* %28, align 1
  %29 = load i8*, i8** @int2char_tmp, align 8
  ret i8* %29
}

declare dso_local i32 @bzero(i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
